<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_include"
        layout="@layout/design_toolbar_general" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <com.view.MTextView
                android:id="@+id/rewardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:textColor="#141414"
                android:textSize="@dimen/_13sdp"
                app:customTypeFace="@string/system_semi_bold"
                tools:text="@string/cancel" />

            <com.view.HTextView
                android:id="@+id/rewardSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:textColor="#141414"
                android:textSize="@dimen/_10sdp"
                app:customTypeFace="@string/system_regular"
                tools:text="@string/cancel" />

            <com.view.MTextView
                android:id="@+id/rewardmore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:textColor="@color/appThemeColor_1"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone"
                app:customTypeFace="@string/system_bold"
                tools:text="@string/cancel" />

            <com.view.MTextView
                android:id="@+id/needHelpTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:textColor="#3F51B5"
                android:textSize="@dimen/_12sdp"
                app:customTypeFace="@string/system_bold"
                tools:text="@string/cancel" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRewardAchieveList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_reward_view" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>