<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_include"
        layout="@layout/design_toolbar_general" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:id="@+id/contentArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="@dimen/_73sdp"
                    android:layout_height="@dimen/_73sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_shape"
                    android:padding="@dimen/_15sdp"
                    android:src="@drawable/ic_menu_subscription" />

                <com.view.MTextView
                    android:id="@+id/subscriptionTypeTitleTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:gravity="center"
                    android:textColor="@color/appThemeColor_1"
                    android:textSize="@dimen/_15ssp"
                    app:customTypeFace="@string/system_semi_bold"
                    tools:text="@string/app_name" />

                <com.view.MTextView
                    android:id="@+id/subscriptionDesTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_11ssp"
                    app:customTypeFace="@string/system_semi_bold"
                    tools:text="@string/app_name" />

                <com.view.MTextView
                    android:id="@+id/memberShipTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:customTypeFace="@string/system_bold"
                    tools:text="Your Membership Details"
                    tools:visibility="visible" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_20sdp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/subscriptionRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:nestedScrollingEnabled="false"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_subscription" />

                    <com.view.MTextView
                        android:id="@+id/noDataTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:textColor="#1C1C1C"
                        android:textSize="@dimen/_16ssp"
                        android:visibility="gone" />

                </RelativeLayout>


            </LinearLayout>


        </ScrollView>

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <com.view.MTextView
            android:id="@+id/noPlansTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="#1C1C1C"
            android:textSize="@dimen/txt_size_16"
            android:visibility="gone" />

        <com.view.ErrorView
            android:id="@+id/errorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>