<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:background="@drawable/card_view_23_white_shadow"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.view.MTextView
                    android:id="@+id/subscriptionTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_12sdp"
                    app:customTypeFace="@string/system_bold"
                    tools:text="@string/app_name" />

                <com.view.MTextView
                    android:id="@+id/subscriptionNameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_10sdp"
                    app:customTypeFace="@string/system_semi_bold"
                    tools:text="@string/app_name" />
            </LinearLayout>

            <com.view.MTextView
                android:id="@+id/subscriptionPriceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/appThemeColor_1"
                android:textSize="@dimen/_12sdp"
                app:customTypeFace="@string/system_bold"
                tools:text="100" />

        </LinearLayout>

        <com.view.MTextView
            android:id="@+id/subscriptionDescTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_11sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:textColor="@color/textSub23Pro_gray"
            android:textSize="@dimen/_10sdp"
            app:customTypeFace="@string/system_regular"
            tools:text="@string/app_name" />

        <LinearLayout
            android:id="@+id/planDetailsArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.view.MTextView
                    android:id="@+id/tvSubscribOnDateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_10sdp"
                    app:customTypeFace="@string/system_semi_bold"
                    tools:text="@string/app_name" />

                <com.view.MTextView
                    android:id="@+id/tvSubscribOnDateValTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textSub23Pro_gray"
                    android:textSize="@dimen/_10sdp"
                    app:customTypeFace="@string/system_regular"
                    tools:text="@string/app_name" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.view.MTextView
                    android:id="@+id/tvExpireOnDateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_10sdp"
                    app:customTypeFace="@string/system_semi_bold"
                    tools:text="@string/app_name" />

                <com.view.MTextView
                    android:id="@+id/tvExpireOnDateValTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textSub23Pro_gray"
                    android:textSize="@dimen/_10sdp"
                    app:customTypeFace="@string/system_regular"
                    tools:text="@string/app_name" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/statusArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|center"
                android:gravity="start|center"
                android:visibility="visible">

                <com.view.MTextView
                    android:id="@+id/statusTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_10sdp"
                    app:customTypeFace="@string/system_semi_bold"
                    tools:text="@string/app_name" />

                <com.view.MTextView
                    android:id="@+id/subscribedStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/appThemeColor_1"
                    android:textSize="@dimen/_10sdp"
                    app:customTypeFace="@string/system_regular"
                    tools:text="@string/app_name" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1">

                    <include
                        android:id="@+id/renewBtnTxt"
                        layout="@layout/btn_type_2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/all_btn_height" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1">

                    <include
                        android:id="@+id/subScribeBtnTxt"
                        layout="@layout/btn_type_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/all_btn_height" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>