<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/card_view_23_white_shadow"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_13sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true">

                <LinearLayout
                    android:layout_width="@dimen/_36sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:background="@drawable/circle_shape"
                    android:padding="@dimen/_5sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/dialogImgView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:background="@drawable/launcher" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_36sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_shape"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_icon"
                        android:layout_width="@dimen/_19sdp"
                        android:layout_height="@dimen/_19sdp"
                        tools:background="@drawable/ic_menu_subscription" />
                </LinearLayout>
            </FrameLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/cv_detailArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="vertical">

            <com.view.MTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/text23Pro_Dark"
                android:textSize="@dimen/_13ssp"
                android:visibility="gone"
                app:customTypeFace="@string/system_bold"
                tools:text="@string/app_name"
                tools:visibility="visible" />


            <com.view.MTextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textAlignment="center"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone"
                app:customTypeFace="@string/system_semi_bold"
                tools:text="@string/app_name"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/horizontalButtonArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/ll_tv_Cancel_Button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/all_btn_height"
                    android:layout_weight="1">

                    <include
                        android:id="@+id/tv_Cancel_Button"
                        layout="@layout/btn_type_2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/all_btn_height" />
                </LinearLayout>

                <View
                    android:id="@+id/dividerview"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="0dp"/>

                <LinearLayout
                    android:id="@+id/ll_tv_Proceed_Button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/all_btn_height"
                    android:layout_weight="1">

                    <include
                        android:id="@+id/tv_Proceed_Button"
                        layout="@layout/btn_type_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/all_btn_height" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/verticalButtonArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_15sdp"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/ll_tv_Positive_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <include
                        android:id="@+id/tv_Positive_Button"
                        layout="@layout/btn_type_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/all_btn_height" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_tv_Negative_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <include
                        android:id="@+id/tv_Negative_Button"
                        layout="@layout/btn_type_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/all_btn_height" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>